# WallitAPI

./: .gitignore  .pre-commit-config.yaml  config.py  mypy.ini  pyproject.toml  requirements.txt  requirements_dev.txt  wallitapi.py
.github/workflows/: python-app.yml
api/: __init__.py  auth.py  categories.py  error_handlers.py  exceptions.py  main.py  schemas.py  transactions.py  user.py  users.py
database/: main.py  models.py
tests/: conftest.py  test_categories.py  test_user.py
